<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.eslam.mystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.eslam.mystore.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.eslam.mystore.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.eslam.mystore.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_newproducrs"
        android:name="com.eslam.mystore.NewProductsFragment"
        android:label="@string/new_products"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_bidding"
        android:name="com.eslam.mystore.BiddingFragment"
        android:label="@string/bidding"
        tools:layout="@layout/fragment_bidding" />
    <fragment
        android:id="@+id/nav_myorders"
        android:name="com.eslam.mystore.MyOrdersFragment"
        android:label="@string/myorders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_mycarts"
        android:name="com.eslam.mystore.MyCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />
</navigation>