<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/register_here"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_full_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/password_register2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account" />

        <TextView
            android:id="@+id/loginNow_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login_now"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>